// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TokenBalance > should render 0 if an undefined fiat balance is provided 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-4 px-6 py-6 sm:px-8"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:items-end sm:space-y-0"
    >
      <div
        class="w-full sm:w-2/3"
      >
        <div
          class="space-y-0.5 text-center font-medium sm:text-left"
        >
          <p
            class="text-sm leading-5.5 text-theme-secondary-500"
          >
            My Balance
          </p>
          <p
            class="truncate text-2xl text-theme-secondary-900"
          >
            $0.00
          </p>
        </div>
      </div>
      <div
        class="sm:w-1/3"
      >
        <div
          class="flex flex-shrink-0 items-center justify-end space-x-3"
        >
          <span
            data-testid="TokenActions__send"
            tabindex="-1"
          >
            <button
              aria-label="Send"
              class="group button-icon-primary"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowUp"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9 19V9.9h3.8c.3 0 .4-.2.2-.5l-5.7-8.3c-.1-.1-.3-.1-.4 0L4.1 9.4c-.2.4-.1.6.2.6h3.8v3.1"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
          <span
            data-testid="TokenActions__receive"
            tabindex="-1"
          >
            <button
              aria-label="Receive"
              class="group button-icon"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowDown"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.104 1v9.1h-3.8c-.3 0-.4.2-.2.5l5.7 8.3c.1.1.3.1.4 0l5.7-8.3c.2-.4.1-.6-.2-.6h-3.8V6.9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-3"
    >
      <div
        class="flex justify-between text-sm font-medium"
      >
        <div
          class="flex min-w-0 pr-2 text-theme-secondary-900"
        >
          <span
            class="mr-1 truncate"
          >
            123
          </span>
          <span>
            TEST
          </span>
        </div>
        <span
          class="text-theme-secondary-700"
        >
          50%
        </span>
      </div>
      <div
        class="h-2 bg-theme-hint-200"
      >
        <div
          class="h-2 bg-theme-hint-600"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenBalance > should render in lg screen 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-4 px-6 py-6 sm:px-8"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:items-end sm:space-y-0"
    >
      <div
        class="w-full sm:w-2/3"
      >
        <div
          class="space-y-0.5 text-center font-medium sm:text-left"
        >
          <p
            class="text-sm leading-5.5 text-theme-secondary-500"
          >
            My Balance
          </p>
          <p
            class="truncate text-2xl text-theme-secondary-900"
          >
            $100.00
          </p>
        </div>
      </div>
      <div
        class="sm:w-1/3"
      >
        <div
          class="flex flex-shrink-0 items-center justify-end space-x-3"
        >
          <span
            data-testid="TokenActions__send"
            tabindex="-1"
          >
            <button
              aria-label="Send"
              class="group button-icon-primary"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowUp"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9 19V9.9h3.8c.3 0 .4-.2.2-.5l-5.7-8.3c-.1-.1-.3-.1-.4 0L4.1 9.4c-.2.4-.1.6.2.6h3.8v3.1"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
          <span
            data-testid="TokenActions__receive"
            tabindex="-1"
          >
            <button
              aria-label="Receive"
              class="group button-icon"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowDown"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.104 1v9.1h-3.8c-.3 0-.4.2-.2.5l5.7 8.3c.1.1.3.1.4 0l5.7-8.3c.2-.4.1-.6-.2-.6h-3.8V6.9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-3"
    >
      <div
        class="flex justify-between text-sm font-medium"
      >
        <div
          class="flex min-w-0 pr-2 text-theme-secondary-900"
        >
          <span
            class="mr-1 truncate"
          >
            123
          </span>
          <span>
            TEST
          </span>
        </div>
        <span
          class="text-theme-secondary-700"
        >
          50%
        </span>
      </div>
      <div
        class="h-2 bg-theme-hint-200"
      >
        <div
          class="h-2 bg-theme-hint-600"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenBalance > should render in md screen 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-4 px-6 py-6 sm:px-8"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:items-end sm:space-y-0"
    >
      <div
        class="w-full sm:w-2/3"
      >
        <div
          class="space-y-0.5 text-center font-medium sm:text-left"
        >
          <p
            class="text-sm leading-5.5 text-theme-secondary-500"
          >
            My Balance
          </p>
          <p
            class="truncate text-2xl text-theme-secondary-900"
          >
            $100.00
          </p>
        </div>
      </div>
      <div
        class="sm:w-1/3"
      >
        <div
          class="flex flex-shrink-0 items-center justify-end space-x-3"
        >
          <span
            data-testid="TokenActions__send"
            tabindex="-1"
          >
            <button
              aria-label="Send"
              class="group button-icon-primary"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowUp"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9 19V9.9h3.8c.3 0 .4-.2.2-.5l-5.7-8.3c-.1-.1-.3-.1-.4 0L4.1 9.4c-.2.4-.1.6.2.6h3.8v3.1"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
          <span
            data-testid="TokenActions__receive"
            tabindex="-1"
          >
            <button
              aria-label="Receive"
              class="group button-icon"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowDown"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.104 1v9.1h-3.8c-.3 0-.4.2-.2.5l5.7 8.3c.1.1.3.1.4 0l5.7-8.3c.2-.4.1-.6-.2-.6h-3.8V6.9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-3"
    >
      <div
        class="flex justify-between text-sm font-medium"
      >
        <div
          class="flex min-w-0 pr-2 text-theme-secondary-900"
        >
          <span
            class="mr-1 truncate"
          >
            123
          </span>
          <span>
            TEST
          </span>
        </div>
        <span
          class="text-theme-secondary-700"
        >
          50%
        </span>
      </div>
      <div
        class="h-2 bg-theme-hint-200"
      >
        <div
          class="h-2 bg-theme-hint-600"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenBalance > should render in md-lg screen 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-4 px-6 py-6 sm:px-8"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:items-end sm:space-y-0"
    >
      <div
        class="w-full sm:w-2/3"
      >
        <div
          class="space-y-0.5 text-center font-medium sm:text-left"
        >
          <p
            class="text-sm leading-5.5 text-theme-secondary-500"
          >
            My Balance
          </p>
          <p
            class="truncate text-2xl text-theme-secondary-900"
          >
            $100.00
          </p>
        </div>
      </div>
      <div
        class="sm:w-1/3"
      >
        <div
          class="flex flex-shrink-0 items-center justify-end space-x-3"
        >
          <span
            data-testid="TokenActions__send"
            tabindex="-1"
          >
            <button
              aria-label="Send"
              class="group button-icon-primary"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowUp"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9 19V9.9h3.8c.3 0 .4-.2.2-.5l-5.7-8.3c-.1-.1-.3-.1-.4 0L4.1 9.4c-.2.4-.1.6.2.6h3.8v3.1"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
          <span
            data-testid="TokenActions__receive"
            tabindex="-1"
          >
            <button
              aria-label="Receive"
              class="group button-icon"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowDown"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.104 1v9.1h-3.8c-.3 0-.4.2-.2.5l5.7 8.3c.1.1.3.1.4 0l5.7-8.3c.2-.4.1-.6-.2-.6h-3.8V6.9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-3"
    >
      <div
        class="flex justify-between text-sm font-medium"
      >
        <div
          class="flex min-w-0 pr-2 text-theme-secondary-900"
        >
          <span
            class="mr-1 truncate"
          >
            123
          </span>
          <span>
            TEST
          </span>
        </div>
        <span
          class="text-theme-secondary-700"
        >
          50%
        </span>
      </div>
      <div
        class="h-2 bg-theme-hint-200"
      >
        <div
          class="h-2 bg-theme-hint-600"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenBalance > should render in sm screen 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-4 px-6 py-6 sm:px-8"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:items-end sm:space-y-0"
    >
      <div
        class="w-full sm:w-2/3"
      >
        <div
          class="space-y-0.5 text-center font-medium sm:text-left"
        >
          <p
            class="text-sm leading-5.5 text-theme-secondary-500"
          >
            My Balance
          </p>
          <p
            class="truncate text-2xl text-theme-secondary-900"
          >
            $100.00
          </p>
        </div>
      </div>
      <div
        class="sm:w-1/3"
      >
        <div
          class="flex flex-shrink-0 items-center justify-end space-x-3"
        >
          <span
            data-testid="TokenActions__send"
            tabindex="-1"
          >
            <button
              aria-label="Send"
              class="group button-icon-primary"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowUp"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9 19V9.9h3.8c.3 0 .4-.2.2-.5l-5.7-8.3c-.1-.1-.3-.1-.4 0L4.1 9.4c-.2.4-.1.6.2.6h3.8v3.1"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
          <span
            data-testid="TokenActions__receive"
            tabindex="-1"
          >
            <button
              aria-label="Receive"
              class="group button-icon"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowDown"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.104 1v9.1h-3.8c-.3 0-.4.2-.2.5l5.7 8.3c.1.1.3.1.4 0l5.7-8.3c.2-.4.1-.6-.2-.6h-3.8V6.9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-3"
    >
      <div
        class="flex justify-between text-sm font-medium"
      >
        <div
          class="flex min-w-0 pr-2 text-theme-secondary-900"
        >
          <span
            class="mr-1 truncate"
          >
            123
          </span>
          <span>
            TEST
          </span>
        </div>
        <span
          class="text-theme-secondary-700"
        >
          50%
        </span>
      </div>
      <div
        class="h-2 bg-theme-hint-200"
      >
        <div
          class="h-2 bg-theme-hint-600"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenBalance > should render in xl screen 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-4 px-6 py-6 sm:px-8"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:items-end sm:space-y-0"
    >
      <div
        class="w-full sm:w-2/3"
      >
        <div
          class="space-y-0.5 text-center font-medium sm:text-left"
        >
          <p
            class="text-sm leading-5.5 text-theme-secondary-500"
          >
            My Balance
          </p>
          <p
            class="truncate text-2xl text-theme-secondary-900"
          >
            $100.00
          </p>
        </div>
      </div>
      <div
        class="sm:w-1/3"
      >
        <div
          class="flex flex-shrink-0 items-center justify-end space-x-3"
        >
          <span
            data-testid="TokenActions__send"
            tabindex="-1"
          >
            <button
              aria-label="Send"
              class="group button-icon-primary"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowUp"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9 19V9.9h3.8c.3 0 .4-.2.2-.5l-5.7-8.3c-.1-.1-.3-.1-.4 0L4.1 9.4c-.2.4-.1.6.2.6h3.8v3.1"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
          <span
            data-testid="TokenActions__receive"
            tabindex="-1"
          >
            <button
              aria-label="Receive"
              class="group button-icon"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowDown"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.104 1v9.1h-3.8c-.3 0-.4.2-.2.5l5.7 8.3c.1.1.3.1.4 0l5.7-8.3c.2-.4.1-.6-.2-.6h-3.8V6.9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-3"
    >
      <div
        class="flex justify-between text-sm font-medium"
      >
        <div
          class="flex min-w-0 pr-2 text-theme-secondary-900"
        >
          <span
            class="mr-1 truncate"
          >
            123
          </span>
          <span>
            TEST
          </span>
        </div>
        <span
          class="text-theme-secondary-700"
        >
          50%
        </span>
      </div>
      <div
        class="h-2 bg-theme-hint-200"
      >
        <div
          class="h-2 bg-theme-hint-600"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenBalance > should render in xs screen 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-4 px-6 py-6 sm:px-8"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:items-end sm:space-y-0"
    >
      <div
        class="w-full sm:w-2/3"
      >
        <div
          class="space-y-0.5 text-center font-medium sm:text-left"
        >
          <p
            class="text-sm leading-5.5 text-theme-secondary-500"
          >
            My Balance
          </p>
          <p
            class="truncate text-2xl text-theme-secondary-900"
          >
            $100.00
          </p>
        </div>
      </div>
      <div
        class="sm:w-1/3"
      >
        <div
          class="flex flex-shrink-0 items-center justify-end space-x-3"
        >
          <span
            data-testid="TokenActions__send"
            tabindex="-1"
          >
            <button
              aria-label="Send"
              class="group button-icon-primary"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowUp"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9 19V9.9h3.8c.3 0 .4-.2.2-.5l-5.7-8.3c-.1-.1-.3-.1-.4 0L4.1 9.4c-.2.4-.1.6.2.6h3.8v3.1"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
          <span
            data-testid="TokenActions__receive"
            tabindex="-1"
          >
            <button
              aria-label="Receive"
              class="group button-icon"
              data-testid="IconButton"
              type="button"
            >
              <svg
                class="h-4 w-4"
                data-testid="icon-FatArrowDown"
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.104 1v9.1h-3.8c-.3 0-.4.2-.2.5l5.7 8.3c.1.1.3.1.4 0l5.7-8.3c.2-.4.1-.6-.2-.6h-3.8V6.9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-3"
    >
      <div
        class="flex justify-between text-sm font-medium"
      >
        <div
          class="flex min-w-0 pr-2 text-theme-secondary-900"
        >
          <span
            class="mr-1 truncate"
          >
            123
          </span>
          <span>
            TEST
          </span>
        </div>
        <span
          class="text-theme-secondary-700"
        >
          50%
        </span>
      </div>
      <div
        class="h-2 bg-theme-hint-200"
      >
        <div
          class="h-2 bg-theme-hint-600"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
